--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Git Projekt</title>
 </head>
 <body> 
-    <h1>Hello Git</h1>
-    <h1>Modify</h1>
+    <header>
+        header
+    </header>
 </body>
 </html>
