--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <header>
         header
     </header>
+    <div class="slider">
+        <h1>Slide one</h1>
+        <h1>Slide two</h1>
+    </div>
 </body>
 </html>
