slide three added to slider

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="slider">
         <h1>Slide one</h1>
         <h1>Slide two</h1>
+        <h1>Slide three</h1>
     </div>
     <footer>
         footer
