--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <header>
         header
     </header>
+    <div class="banner">
+        <img src="banner.jpg" alt="">
+    </div>
     <div class="slider">
         <h1>Slide one</h1>
         <h1>Slide two</h1>
