--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body> 
     <header>
-        header
+        my header
     </header>
     <div class="banner">
         <img src="banner.jpg" alt="">
@@ -15,7 +15,6 @@
     <div class="slider">
         <h1>Slide one</h1>
         <h1>Slide two</h1>
-        <h1>Slide three</h1>
     </div>
     <footer>
         all rights are reserved
