--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="slider">
         <h1>Slide one</h1>
         <h1>Slide two</h1>
+        <h1>slide three</h1>
     </div>
     <footer>
         all rights are reserved 2020
